2017-03-24  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/cm/__init__.py:

	Give credit to the cmocean package by Kristen Thyng.

	* doc/conf.py:

	Set font size and bounding box inches for all plots created in
	the documentation.

	* doc/pyplots/plot_phase_sinus.py, doc/typhon.plots.cm.rst:

	Removed the sine example for the phase colormap.

	* doc/pyplots/plot_density.py, doc/pyplots/plot_phase.py,
	doc/pyplots/plot_speed.py, doc/pyplots/plot_temperature.py,
	doc/pyplots/plot_velocity.py:

	Improved the appearance of all basemap plots in the
	documentation.

	In addition the temperature plot is fully colored as an example
	and the wind direction plot uses a custom ticklabel formatter.


2017-03-22  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/utils/__init__.py(concat_each_time_coordinate):

	- New function.  Taking a collection of xarray.Dataset objects,
	concatenate them along any dimension with a coordinate with a time
	dtype.

2017-03-20  Oliver Lemke  <olemke@core-dump.info>

	* typhon/cm.py: Removed.

2017-03-17  Gerrit Holl  <g.holl@reading.ac.uk:

	* typhon/datasets/dataset.py:

	- Adapt classes such that HomemadeDataset can write to different files
	than it reads, such as is desirable in the case of FCDR generation.

2017-03-17  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/atmosphere.py (vmr, relative_humidity):

	Improved cross-references (use full import path but only show function
	names in html doc.)

2017-03-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/thermodynamics.py (density):

	Improved docstring with example and cross-reference.

	* typhon/legacy: Removed (empty) legacy directory.

2017-03-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/spectroscopy.py (linewidth):

	Improved docstring and added example.

	* typhon/tests/test_spectroscopy.py:

	Added test method for the calculations of linewidth (FWHM).

2017-03-16  Lukas Kluft  <lukas.kluft@gmail.com>
