@@ -16,6 +16,7 @@ plots
    cmap_from_act
    cmap_from_txt
    colors2cmap
+   center_colorbar
    figsize
    get_available_styles
    get_subplot_arrangement
